Fix light_groups.yaml structure with proper light: section and indentation

--- a/automations/lighting/shelly_buttons.yaml
+++ b/automations/lighting/shelly_buttons.yaml
@@ -47,7 +47,7 @@
         metadata: {}
         data: {}
         target:
-          entity_id: light.grupp_matsal
+          entity_id: light.matsalen
 
 - id: '1734259770344'
   alias: Lampor av/PÅ arbetsrum
